<resources>
    <string name="app_name">DicodingStoryApp</string>
    <string name="text_error_password">Password length is less than 6</string>
    <string name="text_error_email">Email is not valid</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="not_have_account">Don\'t have account?</string>
    <string name="story">Story</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="title_camera_permission_alert">Camera permission required</string>
    <string name="desc_camera_permission_alert">To take pictures, you must give the camera permission</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="new_story">New Story</string>
    <string name="your_story_is_empty">Your story is empty</string>
    <string name="change_language">Change language</string>

    <!-- Shared element transition -->
    <string name="story_photo_transition" translatable="false">story photo transition</string>
    <string name="story_user_photo_transition" translatable="false">story user photo transition</string>
    <string name="story_name_transition" translatable="false">story name transition</string>
    <string name="story_date_transition" translatable="false">story date transition</string>
</resources>